--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,7 +21,7 @@ const { currentPage, includeHeader, currentPath } = Astro.props;
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles.css" />
-    <title>Cletus Igwe | {currentPage} | {currentPath}</title>
+    <title>Cletus Igwe | {currentPage} </title>
   </head>
 
   <body class="bg-backgroundLight p-3 font-atkinson">
