--- a/docs/styles.css
+++ b/docs/styles.css
@@ -463,6 +463,23 @@ video {
     h4,
     h5,
     h6 {
+    border-bottom-width: 3px;
+  }
+  h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+    --tw-border-opacity: 1;
+    border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
+  }
+  h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
     font-weight: 700;
   }
   h1,
@@ -473,27 +490,6 @@ video {
     h6 {
     --tw-text-opacity: 1;
     color: rgb(0 0 0 / var(--tw-text-opacity));
-  }
-  @media (min-width: 1024px) {
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      border-bottom-width: 3px;
-    }
-  }
-  @media (min-width: 1024px) {
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      --tw-border-opacity: 1;
-      border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
-    }
   }
   h1 {
     margin-bottom: 1.5rem;
@@ -1080,6 +1076,22 @@ video {
   z-index: 10;
 }
 
+.row-span-2 {
+  grid-row: span 2 / span 2;
+}
+
+.row-span-full {
+  grid-row: 1 / -1;
+}
+
+.row-start-1 {
+  grid-row-start: 1;
+}
+
+.row-start-3 {
+  grid-row-start: 3;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1088,10 +1100,6 @@ video {
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
-}
-
-.-ml-5 {
-  margin-left: -1.25rem;
 }
 
 .mb-1 {
@@ -1110,10 +1118,6 @@ video {
   margin-bottom: 2rem;
 }
 
-.ml-auto {
-  margin-left: auto;
-}
-
 .mt-3 {
   margin-top: 0.75rem;
 }
@@ -1122,16 +1126,16 @@ video {
   margin-top: 1rem;
 }
 
-.mt-auto {
-  margin-top: auto;
-}
-
 .inline-block {
   display: inline-block;
 }
 
 .flex {
   display: flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .size-40 {
@@ -1181,6 +1185,10 @@ video {
   width: 100%;
 }
 
+.grid-rows-10 {
+  grid-template-rows: repeat(10, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -1213,20 +1221,8 @@ video {
   gap: 0.5rem;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
-.gap-4 {
-  gap: 1rem;
-}
-
 .overflow-hidden {
   overflow: hidden;
-}
-
-.whitespace-nowrap {
-  white-space: nowrap;
 }
 
 .rounded-md {
@@ -1253,6 +1249,11 @@ video {
 .border-b-black {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-b-gray-400 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
 .bg-backgroundLight {
@@ -1294,9 +1295,9 @@ video {
   padding: 0.75rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-3 {
@@ -1312,6 +1313,10 @@ video {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 
 .text-end {
@@ -1430,6 +1435,16 @@ video {
   .md\:px-10 {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+  }
+
+  .md\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .md\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .md\:text-2xl {
