--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -22,7 +22,7 @@ const currentPath = Astro.url.pathname;
         {formatDate(pubDate)}
       </h6>
       <h1
-        class="font-bold text-black border-b-[3px] border-b-black whitespace-nowrap w-fit text-4xl md:text-5xl mb-3 mt-4"
+        class="font-bold text-black border-b-[3px] border-b-gray-400 pb-3 w-fit text-4xl md:text-5xl mb-3 mt-4"
       >
         {title}
       </h1>
